--- a/style.css
+++ b/style.css
@@ -19,32 +19,39 @@ body {
     background-color:rgb(0, 0, 255);
   }
 
-  .open-recipe-header {
+  
+
+  .recipeTitle {
     white-space: nowrap;
-    display: show;
+    display: block;
+    visibility: hidden;
     width:100%;
     top: 0%;
     font-family: Georgia;
     position: absolute;
-    border-bottom: 5px solid black;
     overflow: hidden;
     left: 10%;
+  }
+
+  .recipeTitleVisible {
+    visibility: visible;
+    border-bottom: 5px solid black;
     animation: animate 2s linear forwards;
   }
 
   @keyframes animate {
     0% {
-      width: 0px;
+      /* width: 900px; */
       height: 0px;
     }
 
     30% {
-      width: 100px;
-      height: 0px;
+      /* width: 900px; */
+      height: 50px;
     }
 
     60% {
-      width: 200px;
-      height: 18px;
+      /* width: 900px; */
+      height: 100px;
     }
   }
