--- a/style.css
+++ b/style.css
@@ -19,7 +19,20 @@ body {
     background-color:rgb(0, 0, 255);
   }
 
-  
+  .miseEnPlace {
+    white-space: nowrap;
+    display: block;
+    visibility: hidden;
+    width:100%;
+    top: 0%;
+    position: absolute;
+    overflow: hidden;
+    left: 10%;
+  }
+
+  .miseEnPlaceVisible {
+    visibility: visible;
+  }
 
   .recipeTitle {
     white-space: nowrap;
@@ -27,7 +40,6 @@ body {
     visibility: hidden;
     width:100%;
     top: 0%;
-    font-family: Georgia;
     position: absolute;
     overflow: hidden;
     left: 10%;
