--- a/style.css
+++ b/style.css
@@ -54,6 +54,14 @@ body {
     animation: animate 2s linear forwards;
   }
 
+  .instructions {
+    visibility: hidden;
+  }
+
+  .instructionsVisible {
+    visibility: visible;
+  }
+
   @keyframes animate {
     0% {
       /* width: 900px; */
@@ -62,11 +70,11 @@ body {
 
     30% {
       /* width: 900px; */
-      height: 50px;
+      height: 18px;
     }
 
     60% {
       /* width: 900px; */
-      height: 100px;
+      height: 36px;
     }
   }
