--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 header {
-  top: 10%;
+  top: 0;
+  left: 50%;
   margin: 0px;
   padding: 0px;
   text-align: center;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
 }
 
 body {
@@ -11,8 +19,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
-    ;
+    transform: translate(-50%, -50%);
   }
 
   .hideTheOpener {
@@ -28,7 +35,7 @@ body {
     visibility: hidden;
     width:100%;
     top: 0%;
-    position: absolute;
+    /* position: absolute; */
     overflow: hidden;
     left: 10%;
   }
@@ -42,8 +49,8 @@ body {
     display: block;
     visibility: hidden;
     width:100%;
-    top: 0%;
-    position: absolute;
+    top: 100%;
+    position: fixed;
     overflow: hidden;
     left: 10%;
   }
@@ -56,25 +63,103 @@ body {
 
   .instructions {
     visibility: hidden;
+    overflow: hidden;
+    /* position: fixed; */
   }
 
   .instructionsVisible {
     visibility: visible;
+
+    &__container {
+      list-style: none;
+      font-weight: 600;
+      overflow: hidden;
+      height: 40px;
+      padding: 0 40px;
+
+
+    &__list {
+      margin-top: 0;
+      padding-left: 110px;
+      text-align: left;
+      list-style: none;
+      
+      -webkit-animation-name: change;
+      -webkit-animation-duration: 10s;
+      -webkit-animation-iteration-count: infinite;
+      animation-name: change;
+      animation-duration: 10s;
+      animation-iteration-count: infinite;
+
+      &__item {
+        line-height:40px;
+        margin:0;
+      }
+    }
+    }
   }
 
-  @keyframes animate {
-    0% {
-      /* width: 900px; */
-      height: 0px;
-    }
+@-webkit-keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
 
-    30% {
-      /* width: 900px; */
-      height: 18px;
-    }
+@-o-keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
 
-    60% {
-      /* width: 900px; */
-      height: 36px;
-    }
+@-o-keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+@-moz-keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
+
+@-moz-keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+@keyframes opacity {
+  0%, 100% {opacity:0;}
+  50% {opacity:1;}
+}
+
+@keyframes change {
+  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+  33.32%,45.98% {transform:translate3d(0,-50%,0);}
+  49.98%,62.64% {transform:translate3d(0,-75%,0);}
+  66.64%,79.3% {transform:translate3d(0,-50%,0);}
+  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+}
+
+@keyframes animate {
+  0% {
+    height: 0px;
   }
+
+  30% {
+    height: 18px;
+  }
+
+  60% {
+    height: 36px;
+  }
+}
