--- a/style.css
+++ b/style.css
@@ -8,16 +8,10 @@ header {
 }
 
 footer {
-  /* position: absolute;
+  position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 10;
-   */
-   position: fixed;
-   bottom: 0;
-   margin: 0px;
-   padding: 0px;
-   margin-top: auto;
+  margin-top: auto;
 }
 
 body {
@@ -25,12 +19,13 @@ body {
     background-color: rgb(255, 182, 193);
     width:100%;
     height:100%;
-    /* position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    min-height: 100vh;
     display: flex;
-    flex-direction: column; */
+    flex-direction: column;
   }
 
   .opener {
@@ -47,14 +42,8 @@ body {
     display: block;
     visibility: hidden;
     width:100%;
-    /* position: absolute; */
     overflow: hidden;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
   }
 
   .miseEnPlaceVisible {
@@ -82,11 +71,6 @@ body {
     visibility: hidden;
     overflow: hidden;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
   }
 
   .instructionsVisible {
@@ -179,10 +163,10 @@ body {
   }
 
   30% {
-    height: 18px;
+    height: 21px;
   }
 
   60% {
-    height: 36px;
+    height: 42px;
   }
 }
