--- a/style.css
+++ b/style.css
@@ -1,25 +1,38 @@
-header {
-  position: fixed;
+.header {
+  position: relative;
   top: 0;
-  left: 50%;
+  left: 0%;
   margin: 0px;
   padding: 0px;
   text-align: center;
+  white-space: nowrap;
+    display: inline;
+    visibility: visible;
+    width:100%;
+    overflow: hidden;
+    border-bottom: 5px solid black;
+    animation: animate 2s linear forwards;
 }
 
-footer {
+.footer {
   position: absolute;
+  margin-bottom: 0.5%;
   bottom: 0;
   left: 0;
+  width: 100%;
+  text-align: center;
   margin-top: auto;
+  background-color: #F25278;
 }
+
+
 
 body {
     font-family: 'Futura';
     background-color: rgb(255, 182, 193);
     width:100%;
     height:100%;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -35,6 +48,7 @@ body {
   .hideTheOpener {
     visibility: hidden;
     display: block;
+    position: absolute;
   }
 
   .column {
@@ -50,13 +64,19 @@ body {
   }
 
   .recipeSelectionScreen {
+    top: 10%;
+    white-space: nowrap;
     display: block;
+    width: 100%;
     visibility: hidden;
     overflow: hidden;
+    position: absolute;
   }
 
-  .recipeSelectionScreen{
+  .recipeSelectionScreenVisible {
     visibility: visible;
+
+    top: 10%;
   }
 
   .miseEnPlace {
@@ -65,23 +85,23 @@ body {
     visibility: hidden;
     width:100%;
     overflow: hidden;
-    position: fixed;
+    position: absolute;
   }
 
   .miseEnPlaceVisible {
     visibility: visible;
   }
 
-  .recipeTitle {
+
+  /* .recipeTitle {
     white-space: nowrap;
     display: inline;
-    visibility: hidden;
+    visibility: visible;
     width:100%;
-    top: 100%;
-    position: fixed;
     overflow: hidden;
-    left: 50%;
-  }
+    border-bottom: 5px solid black;
+    animation: animate 2s linear forwards;
+  } */
 
   .recipeTitleVisible {
     visibility: visible;
@@ -185,10 +205,10 @@ body {
   }
 
   30% {
-    height: 21px;
+    height: 43px;
   }
 
   60% {
-    height: 42px;
+    height: 86px;
   }
 }
