--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
   }
 
   .column {
+    border: 1px solidblack;
     float: left;
     width: 50%;
     padding: 10px;
@@ -61,6 +62,30 @@ body {
     content: "";
     display: table;
     clear: both;
+  }
+
+  .columnPreview {
+    float: left;
+    width: 33.33%;
+  }
+
+  .rowPreview:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .recipePreview {
+    white-space: nowrap;
+    display: block;
+    visibility: hidden;
+    width:100%;
+    overflow: hidden;
+    position: absolute;
+  }
+
+  .recipePreviewVisible {
+    visibility: visible;
   }
 
   .recipeSelectionScreen {
@@ -210,5 +235,11 @@ body {
 
   60% {
     height: 86px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .columnPreview {
+    width: 100%;
   }
 }
