--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ body {
     width: 100%;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(5, 20%);
-    grid-template-rows: 50% 50%;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(5, 15%);
     grid-auto-flow: column;
   }
 
@@ -81,10 +81,6 @@ body {
     border-radius: 5px;
     padding: 20px;
     font-size: 100%;
-  }
-
-  .column.title {
-    font-style: h2;
   }
   
   .column.readMoreButton {
