--- a/style.css
+++ b/style.css
@@ -33,8 +33,16 @@
 }
 
 .aboutUsVisible {
-  animation: aboutUsVisible 2s ease;
-  animation-fill-mode: forwards;
+  color:black;
+  background-color:#F25278;
+  position: absolute;
+  /* bottom: -100%; */
+  opacity: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: smooth-appear 2s ease forwards;
+  /* animation: aboutUsVisible 2s ease;
+  animation-fill-mode: forwards; */
   /* bottom: 50 px; */
   text-align: center;
 }
@@ -185,6 +193,12 @@ body {
     animation: animate 2s linear forwards;
   }
 
+  .aboutUsExitButton {
+    animation: aboutUsVisible 2s ease;
+    animation-fill-mode: forwards;
+    animation-direction: reverse;
+  }
+
   .instructions {
     visibility: hidden;
     overflow: hidden;
@@ -306,5 +320,16 @@ body {
   }
   100% { 
   height: 15%;
+  }
+}
+
+@keyframes smooth-appear {
+  0%{
+    height: 10%;
+    opacity: 0.5;
+  }
+  100%{
+    height: 15%;
+    opacity: 1;
   }
 }
