--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@
   background-color:#F25278;
   position: absolute;
   /* bottom: -100%; */
-  opacity: 0;
   left: 50%;
   transform: translateX(-50%);
   animation: smooth-appear 2s ease forwards;
@@ -112,7 +111,7 @@ body {
 
   .sayMore {
     visibility: hidden;
-    height: -12%;
+    /* height: -12%; */
     display: block;
     position: absolute;
   }
@@ -176,17 +175,6 @@ body {
     visibility: visible;
   }
 
-
-  /* .recipeTitle {
-    white-space: nowrap;
-    display: inline;
-    visibility: visible;
-    width:100%;
-    overflow: hidden;
-    border-bottom: 5px solid black;
-    animation: animate 2s linear forwards;
-  } */
-
   .recipeTitleVisible {
     visibility: visible;
     border-bottom: 5px solid black;
@@ -194,8 +182,8 @@ body {
   }
 
   .aboutUsExitButton {
-    animation: aboutUsVisible 2s ease;
-    animation-fill-mode: forwards;
+    animation: smooth-appear 2s ease reverse;
+    animation-fill-mode: backwards;
     animation-direction: reverse;
   }
 
@@ -314,22 +302,11 @@ body {
   }
 }
 
-@keyframes aboutUsVisible {
-  0% { 
-  height: 10%;
-  }
-  100% { 
-  height: 15%;
-  }
-}
-
 @keyframes smooth-appear {
   0%{
-    height: 10%;
-    opacity: 0.5;
+    height: 7%;
   }
   100%{
     height: 15%;
-    opacity: 1;
   }
 }
