--- a/style.css
+++ b/style.css
@@ -95,12 +95,22 @@ body {
   }
 
   .wrapper{
-    width: 100%;
-    display: grid;
+    width: 80%;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
     grid-gap: 10px;
     grid-template-columns: repeat(2, 50%);
-    grid-template-rows: 18% 18% 18% 18% 18%;
+    grid-template-rows: 16% 16% 16% 16% 16%;
     grid-auto-flow: row;
+  }
+
+  .recipeSelectionTitle {
+    font-size: 20px;
+  }
+
+  .buttonWrangler {
+    justify-content: space-evenly;
   }
 
   .column {
@@ -109,15 +119,17 @@ body {
     border-radius: 5px;
     padding: 20px;
     font-size: 100%;
-    /* display: flex;
+    display: flex;
+    flex: 1 0 40%;
     flex-direction: column;
-    justify-content: space-between; */
+    justify-content: space-between;
   }
   
   .readMoreButton {
     border: none;
     font-family: 'Futura';
     background-color: rgb(246, 121, 142);
+    justify-content: space-between;
   }
 
   .readMoreButton:hover {
@@ -135,9 +147,15 @@ body {
     visibility: visible;
   }
 
+  .imageColumn {
+    float: left;
+    overflow: hidden;
+    max-width:40%;
+  }
+
   .columnPreview {
     float: left;
-    width: 33.33%;
+    width: 30%;
     overflow: hidden;
   }
 
@@ -164,6 +182,7 @@ body {
   .recipeSelectionScreen {
     top: 10%;
     white-space: nowrap;
+    padding: 5px;
     display: block;
     width: 100%;
     visibility: hidden;
@@ -172,8 +191,10 @@ body {
   }
 
   .alignPageInfo {
-    display: inline-block;
-    text-align: center;
+    /* display: inline-block; */
+    display: flex;
+    justify-content:space-evenly;
+    /* text-align: center; */
   }
 
   .recipeSelectionScreenVisible {
@@ -186,8 +207,8 @@ body {
     border-radius: 20 px;
     font-family: 'Futura';
     border: none;
-    display: inline-block;
-    text-align: center;
+    /* display: inline-block;
+    text-align: center; */
   }
 
   .pageCounter {
@@ -221,9 +242,11 @@ body {
   }
 
   .instructions {
+    top: 10%;
     visibility: hidden;
     overflow: hidden;
-    position: fixed;
+    position: absolute;
+    display: block;
   }
 
 
@@ -231,7 +254,7 @@ body {
     visibility: visible;
     
 
-    &--container {
+    &__container {
       list-style: none;
       font-weight: 600;
       overflow: hidden;
@@ -239,7 +262,7 @@ body {
       padding: 0 40px;
 
 
-    &--list {
+    &__list {
       margin-top: 0;
       padding-left: 110px;
       text-align: left;
@@ -252,7 +275,7 @@ body {
       animation-duration: 10s;
       animation-iteration-count: infinite;
 
-      &--item {
+      &__item {
         line-height:40px;
         margin:0;
       }
