--- a/style.css
+++ b/style.css
@@ -249,99 +249,65 @@ body {
     display: block;
   }
 
-
   .instructionsVisible {
     visibility: visible;
-    
-
-    &__container {
-      list-style: none;
-      font-weight: 600;
-      overflow: hidden;
-      height: 40px;
-      padding: 0 40px;
-
-
-    &__list {
-      margin-top: 0;
-      padding-left: 110px;
-      text-align: left;
-      list-style: none;
-      
-      -webkit-animation-name: change;
-      -webkit-animation-duration: 10s;
-      -webkit-animation-iteration-count: infinite;
-      animation-name: change;
-      animation-duration: 10s;
-      animation-iteration-count: infinite;
-
-      &__item {
-        line-height:40px;
-        margin:0;
-      }
-      
     }
-  }
-}
 
   .previousInstruction {
-    height: 80px;
+    font-size: 20px;
     animation: previousInstructionAnim 1s;
   }
 
   .currentInstruction {
-    height: 160px;
+    font-size: 40px;
     animation: currentInstuctionAnim 1s;
   }
 
   .nextInstruction {
-    height: 80 px;
+    font-size: 20 px;
     animation: nextInstructionAnim 1s;
   }
+
+  .exitInstructionFront {
+    animation: leaveInstructionAnim 1s;
+  }
+
     
   @keyframes currentInstructionAnim {
     0% {
-      font-size: 80px;}
+      font-size: 25px;}
     50% {
-      font-size: 120px;
+      font-size: 40px;
     }
   }
 
   @keyframes nextInstructionAnim {
     0% {
-      font-size: 40 px;
+      font-size: 10 px;
     }
     50% {
-      font-size: 60 px;
+      font-size: 25 px;
     }
   }
 
   @keyframes previousInstructionAnim {
     0% {
-      font-size: 160 px;
+      font-size: 40 px;
     }
     50% {
-      font-size: 120 px;
+      font-size: 25 px;
     }
   }
 
   @keyframes leaveInstructionAnim {
     0% {
-      font-size: 80 px;
+      font-size: 25 px;
     }
     50% {
-      font-size: 60 px;
+      font-size: 10 px;
     }
   }
-
-  @keyframes enterInstructionAnim {
-    0% {
-      font-size: 40 px;
-    }
-    50% {
-      font-size: 60 px;
-    }
-  }
+  
   
 
 @-webkit-keyframes change {
