Final Tuesday commit

--- a/style.css
+++ b/style.css
@@ -68,12 +68,16 @@
 }
 
 
+ul {
+  list-style-type: none;
+}
 
 body {
     font-family: 'Futura';
     background-color: rgb(255, 182, 193);
     width:100%;
     height:100%;
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
