--- a/style.css
+++ b/style.css
@@ -241,7 +241,6 @@ body {
 
   .instructions {
     top: 10%;
-    width: 100%;
     visibility: hidden;
     overflow: hidden;
     position: absolute;
@@ -253,14 +252,78 @@ body {
     visibility: visible;
     }
 
+  .instructionsText {
+    width: 100%;
+  }
+
   .instructionManipulationButton {
     border: 1px solid #F25278;
-    background-color: #F25278;
     color: black;
   }
 
   .instructionManipulationButton:hover {
     color:white;
+    background-color: #F25278;
+  }
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #F25278;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #F25278;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
   }
 
   .informationPanel {
@@ -269,7 +332,7 @@ body {
     border-radius: 4px;
     display: flex;
     margin: 25%;
-    visibility: visible;
+    visibility: hidden;
     font-size: x-large;
     justify-content: center;
     text-align: center;
@@ -281,7 +344,6 @@ body {
     display: flex;
     justify-content: right;
     align-self: flex-start;
-    visibility: visible;
     font-family: Futura;
     border: none;
     background-color:#F25278;
@@ -306,6 +368,14 @@ body {
 
   .exitInstructionFront {
     animation: leaveInstructionAnim 1s;
+  }
+
+  .instructionOptionsPanel {
+    background-color: #F25278;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    margin: 25%;
   }
 
     
