--- a/style.css
+++ b/style.css
@@ -285,6 +285,12 @@ body {
     /* align-items: center; */
   }
 
+  .accentText {
+    line-height: 1.5;
+    color: #f5e3e7;
+    font-size: x-large;
+  }
+
   .instructionManipulationButton:hover {
     color:white;
     background-color: #F25278;
@@ -336,7 +342,7 @@ body {
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #f2073e;
+    box-shadow: 0 0 1px #c1012ead;
   }
   
   input:checked + .slider:before {
@@ -362,12 +368,12 @@ body {
     margin-left: 25%;
     margin-right: 25%;
     visibility: hidden;
-    font-size: x-large;
+    font-size: large;
     justify-content: center;
     flex-direction: column;
     text-align: center;
     align-items: center;
-    z-index: -1;
+    z-index: 1;
   }
 
   .exitInfoPanel {
@@ -402,16 +408,20 @@ body {
   .previousInstruction {
     font-size: 20px;
     animation: previousInstructionAnim 1s;
+    animation-fill-mode: forwards;
+
   }
 
   .currentInstruction {
     font-size: 40px;
     animation: currentInstuctionAnim 1s;
+    animation-fill-mode: forwards;
   }
 
   .nextInstruction {
     font-size: 20 px;
     animation: nextInstructionAnim 1s;
+    animation-fill-mode: forwards;
   }
 
   .exitInstructionFront {
@@ -419,64 +429,54 @@ body {
   }
 
     
-  @keyframes currentInstructionAnim {
+  /* @keyframes currentInstructionAnim {
     0% {
       font-size: 25px;}
     50% {
       font-size: 40px;
     }
-  }
+  } */
+
+  @keyframes currentInstructionAnim {
+    from {
+      transform: scale(1.5)
+    }  
+    to {
+      transform: scale(2)
+    }
+}  
+
 
   @keyframes nextInstructionAnim {
-    0% {
-      font-size: 10 px;
+    from {
+      transform: scale(1)
     }
-    50% {
-      font-size: 25 px;
+    to {
+      transform: scale(1.25);
     }
   }
 
   @keyframes previousInstructionAnim {
-    0% {
-      font-size: 40 px;
+    from {
+      transform: scale(1.5);
     }
-    50% {
-      font-size: 25 px;
+    to {
+      transform: scale(1.25);
     }
   }
 
   @keyframes leaveInstructionAnim {
-    0% {
-      font-size: 25 px;
+    from {
+      transform: scale(1.25);
     }
     50% {
-      font-size: 10 px;
+      transform: scale(1);
     }
   }
-  
-  
-
-@-webkit-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
-}
 
 @-o-keyframes opacity {
   0% {opacity:1;}
   100% {opacity:0;}
-}
-
-@-o-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
 }
 
 @-moz-keyframes opacity {
@@ -484,27 +484,9 @@ body {
   100% {opacity:0;}
 }
 
-@-moz-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
-}
-
 @keyframes opacity {
   0% {opacity:1;}
   100% {opacity:0;}
-}
-
-@keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
 }
 
 @keyframes animate {
@@ -518,20 +500,6 @@ body {
 
   60% {
     height: 86px;
-  }
-}
-
-@keyframes home{
-  0% {
-    height: 0px;
-  }
-
-  30% {
-    height: 50px;
-  }
-
-  60% {
-    height: 100px;
   }
 }
 
@@ -551,19 +519,5 @@ body {
   }
   100%{
     height: 15%;
-  }
-}
-
-@keyframes ripple {
-  0% {
-      width: 0;
-      height: 0;
-      opacity: .5;
-  }
-  
-  100% {
-      width: 50px;
-      height: 50px;
-      opacity: 0;
   }
 }
