--- a/style.css
+++ b/style.css
@@ -148,7 +148,6 @@ body {
 
   .sayMore {
     visibility: hidden;
-    /* height: -12%; */
     display: block;
     position: absolute;
   }
@@ -251,7 +250,7 @@ body {
     top: 15%;
     width: 100%;
     visibility: hidden;
-    overflow: hidden;
+    overflow: visible;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -277,17 +276,15 @@ body {
 
   .instructionManipulationButton {
     font-family: 'Futura';
-    /* justify-content: space-evenly; */
     border: 1px solid #F25278;
     background-color: #f0b7c5;
     color: black;
     border-radius: 5px;
-    /* align-items: center; */
   }
 
   .accentText {
     line-height: 1.5;
-    color: #f5e3e7;
+    color: #f3e1e5;
     font-size: x-large;
   }
 
@@ -298,11 +295,29 @@ body {
 
   .instructionManipulationButton:disabled {
     background-color: rgb(210, 209, 209);
+    color: black;
+  }
+
+  .boxContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .box {
+    margin-top: 10px;
+    width: 50%;
+    
+    align-self:center;
+    align-content:center;
   }
 
   .switch {
     position: relative;
     display: flex;
+    align-items: center;
+    align-self: center;
     width: 60px;
     height: 34px;
   }
@@ -338,7 +353,7 @@ body {
   }
   
   input:checked + .slider {
-    background-color: #f2073e;
+    background-color: rgb(246, 127, 181);
   }
   
   input:focus + .slider {
@@ -428,21 +443,13 @@ body {
     animation: leaveInstructionAnim 1s;
   }
 
-    
-  /* @keyframes currentInstructionAnim {
-    0% {
-      font-size: 25px;}
-    50% {
-      font-size: 40px;
-    }
-  } */
 
   @keyframes currentInstructionAnim {
     from {
-      transform: scale(1.5)
+      transform: scale(1)
     }  
     to {
-      transform: scale(2)
+      transform: scale(1.25)
     }
 }  
 
@@ -458,21 +465,22 @@ body {
 
   @keyframes previousInstructionAnim {
     from {
-      transform: scale(1.5);
+      transform: scale(1);
     }
     to {
-      transform: scale(1.25);
+      transform: scale(0.8);
     }
   }
 
   @keyframes leaveInstructionAnim {
     from {
-      transform: scale(1.25);
-    }
-    50% {
       transform: scale(1);
     }
-  }
+    50% {
+      transform: scale(0.8);
+    }
+  } 
+
 
 @-o-keyframes opacity {
   0% {opacity:1;}
