--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
 
 .backToHome {
   border: none;
-  padding: 0;
+  padding-inline: -6px;
+  padding-block: -1px;
   background: none;
 }
 
@@ -254,8 +255,7 @@ body {
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    /* align-items: center; */
+    align-items: center;
   }
 
   .instructionsVisible {
@@ -263,13 +263,14 @@ body {
     }
 
   .instructionsText {
-    width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 
   .instructionManipulation {
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
   }
@@ -306,16 +307,16 @@ body {
   }
 
   .box {
-    margin-top: 10px;
+    margin-top: 25px;
     width: 50%;
-    
     align-self:center;
     align-content:center;
   }
 
   .switch {
     position: relative;
-    display: flex;
+    display: inline-block;
+    text-align: center;
     align-items: center;
     align-self: center;
     width: 60px;
@@ -389,13 +390,15 @@ body {
     text-align: center;
     align-items: center;
     z-index: 1;
+    padding-bottom: 3%;
   }
 
   .exitInfoPanel {
+    width: 100%;
     display: flex;
     justify-content: right;
     align-self: flex-start;
-    font-family: Futura;
+    font-family: 'Futura';
     border: none;
     background-color:#F25278;
     color: white;
@@ -404,14 +407,16 @@ body {
 
   .instructionExits {
     display: flex;
-    justify-content: center;
-    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-self: flex-start;
+    flex-direction: column;
   }
 
   .instructionExitsButtons {
     font-family: 'Futura';
     border: none;
-    font-size:large;
+    font-size:medium ;
     background-color: rgb(255, 182, 193);
     text-align: left;
   }
