--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@
   animation-delay: 2s
 }
 
+.settingsButton {
+  background-color: rgb(255, 182, 193);
+  /* background: none; */
+  border: none;
+  opacity: 0;
+  width:50px;
+  height:50px;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
