--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
   text-align: center;
   white-space: nowrap;
   z-index: -2;
-    display: inline;
-    visibility: visible;
-    width:100%;
-    overflow: hidden;
-    border-bottom: 5px solid black;
-    animation: animate 2s linear forwards;
+  display: inline;
+  visibility: visible;
+  width:100%;
+  overflow: hidden;
+  border-bottom: 5px solid black;
+  animation: animate 2s linear forwards;
 }
 
 .backToHome {
@@ -40,13 +40,23 @@
   animation-delay: 2s
 }
 
+.instructionSettingsButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-right: 15 px;
+  align-items: flex-end;
+  /* align-self: flex-end;  */
+  text-align: right;
+}
+
 .settingsButton {
+  text-align:right;
+  align-self:flex-end;
   background-color: rgb(255, 182, 193);
-  /* background: none; */
   border: none;
-  opacity: 0;
-  width:50px;
-  height:50px;
+  width:40px;
+  height:40px;
 }
 
 .footer {
@@ -106,7 +116,6 @@ body {
     font-size: 16px;
     text-align: center;
     position: absolute;
-    
     top: 50%;
     left: 50%;
     margin: 0px;
@@ -420,7 +429,7 @@ body {
     font-size: large;
   }
 
-  .instructionExits {
+ * .instructionExits {
     display: flex;
     justify-content: flex-start;
     padding-left: 15 px;
@@ -526,6 +535,7 @@ font-size: 25px;    }
 @keyframes opacity {
   0% {opacity:1;}
   100% {opacity:0;}
+  
 }
 
 @keyframes animate {
@@ -534,11 +544,11 @@ font-size: 25px;    }
   }
 
   30% {
-    height: 43px;
+    height: 53px;
   }
 
   60% {
-    height: 86px;
+    height: 106px;
   }
 }
 
