--- a/style.css
+++ b/style.css
@@ -40,13 +40,12 @@
   animation-delay: 2s
 }
 
-.instructionSettingsButton {
+.instructionsWrapper {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  padding-right: 15 px;
-  align-self: flex-end; 
-  text-align: right;
+  padding-right: 15px;
+  width: 100%;
 }
 
 .settingsButton {
@@ -54,8 +53,8 @@
   align-self:flex-end;
   background-color: rgb(255, 182, 193);
   border: none;
-  width:40px;
-  height:40px;
+  width:30px;
+  height:30px;
 }
 
 .footer {
@@ -124,11 +123,7 @@ body {
     height:100%;
     font-size: 16px;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
     margin: 0px;
-    transform: translate(-50%, -50%);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -229,14 +224,14 @@ body {
   }
 
   .recipeSelectionScreen {
-    top: 10%;
+    top: 20%;
     white-space: nowrap;
     padding: 5px;
     display: flex;
     width: 100%;
     visibility: hidden;
     overflow: hidden;
-    /* position: absolute; */
+    position: absolute;
     justify-content: space-around;
   }
 
@@ -488,7 +483,6 @@ body {
   }
 
   .exitInstructionFront {
-    /* font-size: 10px; */
     animation: leaveInstructionAnim 1s;
     animation-fill-mode: forwards;
   }
@@ -496,11 +490,9 @@ body {
 
   @keyframes currentInstructionAnim {
     from {
-      /* transform: scale(2) */
       font-size: 25px;
     }  
     to {
-      /* transform: scale(3) */
       font-size: 40px;
     }
 }  
@@ -508,33 +500,26 @@ body {
 
   @keyframes nextInstructionAnim {
     from {
-      /* transform: scale(1) */
       font-size: 16px;
     }
     to {
-      /* transform: scale(2); */
-
-font-size: 25px;    }
+      font-size: 25px;    }
   }
 
   @keyframes previousInstructionAnim {
     from {
-      /* transform: scale(3); */
       font-size: 40px;
     }
     to {
-      /* transform: scale(2); */
       font-size: 25px;
     }
   }
 
   @keyframes leaveInstructionAnim {
     from {
-      /* transform: scale(2); */
       font-size: 25px;
     }
     to {
-      /* transform: scale(1); */
       font-size: 16px;
     }
   } 
