--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   padding: 0px;
   text-align: center;
   white-space: nowrap;
+  min-height: 1vh;
   z-index: 1;
   display: inline;
   visibility: visible;
@@ -124,13 +125,18 @@ body {
     font-size: 16px;
     text-align: center;
     margin: 0px;
-    min-height: 100vh;
+    min-height: 75vh;
     display: flex;
     flex-direction: column;
   }
 
   .opener {
+    gap: 15px;
     visibility: visible;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .hideTheOpener {
@@ -224,14 +230,12 @@ body {
   }
 
   .recipeSelectionScreen {
-    top: 20%;
     white-space: nowrap;
-    padding: 5px;
+    /* padding: 5px; */
     display: flex;
     width: 100%;
     visibility: hidden;
     overflow: hidden;
-    position: absolute;
     justify-content: space-around;
   }
 
@@ -418,14 +422,21 @@ body {
     display: flex;
     margin-left: 25%;
     margin-right: 25%;
+    margin-top:20%;
     visibility: hidden;
     font-size: large;
     justify-content: center;
     flex-direction: column;
     text-align: center;
     align-items: center;
+    position:fixed;
     z-index: 1;
     padding-bottom: 3%;
+  }
+
+  .letsGoButton {
+    border:1px solid black;
+    padding-inline: 5px;
   }
 
   .exitInfoPanel {
@@ -556,12 +567,37 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .columnPreview {
+  .column {
     width: 100%;
   }
 
   .wrapper{
-    grid-template-columns: repeat(1, 100%);
+    max-height:65vh;
+    overflow: scroll;
+  }
+
+  .header {
+    animation: none;
+    /* font-size: 20px; */
+    /* min-height:15vh; */
+  }
+
+  body {
+    font-size:15px;
+    min-height:90vh;
+    max-height:90vh;
+    overflow: hidden;
+  }
+
+  .informationPanel {
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 20%;
+    margin-bottom:20%;
+  }
+
+  .footer {
+    min-height: 10vh;
   }
 }
 
