--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ ul {
   flex-direction:column;
   row-gap: 20px;
   color: rgb(216, 216, 216);
-  font-weight: bold;
 }
 
 .enterText {
@@ -126,6 +125,7 @@ body {
     text-align: center;
     margin: 0px;
     min-height: 75vh;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
   }
@@ -285,11 +285,16 @@ body {
     animation: animate 2s linear forwards;
   }
 
-  .aboutUsExitButton {
+  .goAwayAbout {
     animation: smooth-appear 2s ease reverse;
-    animation-fill-mode: backwards;
     animation-direction: reverse;
   }
+
+  /* .aboutUsExitButton {
+    animation: smooth-appear 2s ease;
+    animation-direction: reverse;
+    animation-fill-mode: backwards;
+  } */
 
   .instructions {
     top: 15%;
@@ -437,6 +442,7 @@ body {
   .letsGoButton {
     border:1px solid black;
     padding-inline: 5px;
+    
   }
 
   .exitInfoPanel {
@@ -596,9 +602,10 @@ body {
     margin-bottom:20%;
   }
 
-  .footer {
+  .aboutUsVisible {
     min-height: 10vh;
-  }
+    animation: smooth-appear-mobile 2s ease forwards;
+  } 
 }
 
 @keyframes smooth-appear {
@@ -606,6 +613,15 @@ body {
     height: 7%;
   }
   100%{
-    height: 15%;
+    height: 25%;
+  }
+}
+
+@keyframes smooth-appear-mobile {
+  0%{
+    height: 7%;
+  }
+  100%{
+    height: 35%;
   }
 }
